--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     <aside class="menu-lateral">
         <ul>
             <li>
-                <a href="#" target="_blank"> 
+                <a href="https://github.com/Marcos-Brandao" target="_blank"> 
                     <img src="src/imagens/github.svg" alt="Ícone GitHub" class="icone">
                 </a>
             </li>
             <li>
-                <a href="#" target="_blank"> 
+                <a href="https://www.linkedin.com/in/marcos-brandaodev" target="_blank"> 
                     <img src="src/imagens/linkedin-in.svg" alt="Ícone linkedin-in" class="icone">
                 </a>
             </li>
